--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
     <!-- header -->
     <header class="container mx-auto lg:px-10 px-5">
         <!-- navbar -->
-        <!-- <nav>
-
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <div class="dropdown">
+        <nav>
+            <div class="navbar flex md:justify-between bg-base-100">
+                <div class="flex">
+                    <div class="dropdown order-last">
                         <label tabindex="0" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
@@ -59,24 +58,33 @@
                                     d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </label>
                         <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            class="menu order-12 menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                             <li><a>Item 1</a></li>
                             <li><a>Item 3</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+                    <div class="lg:mx-auto">
+                        <a class="flex items-center justify-center"><img src="./images/logo.png" alt="">Fruit Burst</a>
+                    </div>
                 </div>
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
-                        <li><a>Home</a></li>
-                        <li><a>About</a></li>
+                <div class="navbar-center hidden lg:flex lg:order-first">
+                    <ul class="menu menu-horizontal px-7">
+                        <li><a>Item 1</a></li>
+                        <li><a>Item 3</a></li>
+                        <li><a>Item 3</a></li>
+                        <li><a>Item 3</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end">
-                    <a class="btn">Button</a>
+                <div class="lg:block hidden">
+                    <a class="btn">
+                        <div class="join">
+                            <input class="input input-bordered join-item" placeholder="Email" />
+                            <button class="btn join-item rounded-r-full">Subscribe</button>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </nav> -->
+        </nav>
         <!-- banner section  -->
         <section>
             <div class="carousel w-full h-[190px] md:h-[450px] lg:h-[600px]">
@@ -147,8 +155,7 @@
                             <p class="md:text-xl text-sm font-normal text-white my-4 md:my-8">We supply highly quality
                                 organic products</p>
                             <button
-                                class=" md:px-7  md:py-5 py-3 px-5 text-sm md:text-xl font-bold text-white bg-primary-color rounded-md border-0">Shop
-                                Now</button>
+                                class=" md:px-7  md:py-5 py-3 px-5 text-sm md:text-xl font-bold text-white bg-primary-color rounded-md border-0"></button>
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -216,26 +223,26 @@
                             <p>Apple</p>
                             <!-- ratting  -->
                             <div class="rating rating-md rating-half my-4">
-                                <input type="radio" name="rating-10" class="rating-hidden" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1" class="rating-hidden" />
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" checked />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-1"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
                             </div>
                             <a class="text-lg font-bold text-primary-color" href="#">Details</a>
@@ -252,26 +259,26 @@
                             <p>Orange</p>
                             <!-- ratting  -->
                             <div class="rating rating-md rating-half my-4">
-                                <input type="radio" name="rating-10" class="rating-hidden" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2" class="rating-hidden" />
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" checked />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-2"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
                             </div>
                             <a class="text-lg font-bold text-primary-color" href="#">Details</a>
@@ -288,26 +295,26 @@
                             <p>Red Dragon</p>
                             <!-- ratting  -->
                             <div class="rating rating-md rating-half my-4">
-                                <input type="radio" name="rating-10" class="rating-hidden" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3" class="rating-hidden" />
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" checked />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-1" />
-                                <input type="radio" name="rating-10"
+                                <input type="radio" name="rating-3"
                                     class="bg-primary-color mask mask-star-2 mask-half-2" />
                             </div>
                             <a class="text-lg font-bold text-primary-color" href="#">Details</a>
@@ -435,19 +442,19 @@
         </section>
     </main>
     <!-- footer -->
-    <footer class="container footer footer-center p-10 bg-black text-white">
+    <footer class="footer footer-center p-10 bg-black text-white">
         <div>
             <div class="grid grid-flow-col gap-4 items-center">
                 <img src="./images/logo.png" alt="">
                 <span class="text-4xl font-bold">Fruit Burst</span>
             </div>
-            <div class="flex lg:flex-col flex-row lg:gap-16 md:my-16">
+            <div class="grid lg:gap-14 lg:grid-cols-6 lg:my-16 grid-cols-4">
                 <a class="link link-hover text-lg font-semibold">Home</a>
                 <a class="link link-hover text-lg font-semibold">About</a>
                 <a class="link link-hover text-lg font-semibold">Shop</a>
                 <a class="link link-hover text-lg font-semibold">All Fruit</a>
                 <a class="link link-hover text-lg font-semibold">Support</a>
-                <a class="link link-hover text-lg font-semibold">Account</a>
+                <a class="link link-hover text-lg font-semibold ">Account</a>
             </div>
             <div class="grid grid-cols-3 gap-4 lg:grid-flow-col lg:gap-10">
                 <a><i class="fa-brands fa-twitter text-4xl"></i></a>
