--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <ul tabindex="1"
                             class="menu order-12 menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-32 ">
                             <li><a>Home</a></li>
-                            <li><a>About</a></li>
+                            <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
                             <li><a>All Fruit</a></li>
                         </ul>
@@ -73,7 +73,7 @@
                 <div class="navbar-center hidden lg:flex lg:order-first ">
                     <ul class="menu menu-horizontal lg:px-7 text-lg font-medium text-white">
                         <li><a class="">Home</a></li>
-                        <li><a>About</a></li>
+                        <li><a>About Us</a></li>
                         <li><a>Shop</a></li>
                         <li><a>All Fruit</a></li>
                     </ul>
@@ -92,7 +92,7 @@
         </nav>
         <!-- banner section  -->
         <section>
-            <div class="carousel w-full h-[190px] md:h-[450px] lg:h-[600px]">
+            <div class="carousel w-full h-[190px] md:h-[450px] lg:h-[600px] relative">
                 <!-- slide one -->
                 <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-banner-img-one bg-cover">
                     <!-- banner content -->
@@ -170,11 +170,42 @@
                 </div>
             </div>
         </section>
+        <!-- fruit item ad section -->
+        <section class="px-[122px] absolute -bottom-[170px] lg:block hidden ">
+            <!-- item container -->
+            <div class="flex gap-24 px-16 py-12 bg-white shadow-xl">
+                <!-- item -->
+                <div class="text-center">
+                    <img src="./images/fruit1.png" alt="">
+                    <p>Grapes</p>
+                </div>
+                <!-- item -->
+                <div class="text-center">
+                    <img src="./images/fruit2.png" alt="">
+                    <p>Orange</p>
+                </div>
+                <!-- item -->
+                <div class="text-center">
+                    <img src="./images/fruit3.png" alt="">
+                    <p>Mango</p>
+                </div>
+                <!-- item -->
+                <div class="text-center">
+                    <img src="./images/fruit4.png" alt="">
+                    <p>Stowbarry</p>
+                </div>
+                <!-- item -->
+                <div class="text-center">
+                    <img src="./images/fruit5.png" alt="">
+                    <p>Pomegranate</p>
+                </div>
+            </div>
+        </section>
     </header>
     <!-- main -->
     <main class="container mx-auto lg:px-10 px-5">
         <!-- deal of day -->
-        <section class="lg:mt-24 md:mt-14">
+        <section class="lg:mt-72 md:mt-14">
             <!-- duration container -->
             <div class="flex flex-col md:flex-row justify-between my-5 md:my-15 text-center md:text-left">
                 <!-- content duration -->
