added why choose us section

--- a/index.html
+++ b/index.html
@@ -620,6 +620,114 @@
 
             </div>
         </section>
+        <!-- who choose us section -->
+        <section class="lg:my-32 md:my-20 my-8">
+            <!-- title -->
+            <div class="mx-auto text-center my-6">
+                <h3 class="md:text-5xl text-xl text-black font-extrabold ">Why Choose Us</h3>
+                <p class="md:text-base text-sm mx-auto  lg:w-[600px] md:w-96 leading-7 my-2 md:my-6">Contrary to popular
+                    belief, is not simply random text. It has roots
+                    in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <!-- container -->
+            <div class="grid lg:grid-cols-3 grid-cols-1 md:justify-between">
+                <!-- first -->
+                <div class="md:mx-auto space-y-5">
+                    <div class="flex items-center justify-center gap-6 flex-col lg:flex-row mt-6">
+                        <div><i
+                                class="fa-solid fa-people-group flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold ">Dedicated Team</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0"></div>
+                                <p class="max-w-xs text-base font-medium pt-4">Professional employees are there for you
+                                    to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-center gap-6 flex-col lg:flex-row mt-6">
+                        <div><i
+                                class="fa-solid fa-heart-pulse flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold ">Fresh is Best</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0"></div>
+                                <p class="max-w-xs text-base font-medium pt-4">Professional employees are there for you
+                                    to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-center gap-6 flex-col lg:flex-row mt-6">
+                        <div><i
+                                class="fa-solid fa-gift flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold ">Gift Certificates</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0"></div>
+                                <p class="max-w-xs text-base font-medium pt-4">Professional employees are there for you
+                                    to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- second -->
+                <div class="order-first lg:order-none md:mx-auto lg:mt-6 md:my-6">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <!-- third -->
+                <div class="text-end md:mx-auto">
+                    <div class="flex items-center justify-center gap-6 flex-col  lg:flex-row-reverse mt-6">
+                        <div><i
+                                class="fa-brands fa-accessible-icon flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold lg:text-right">Integrated Supplier</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0 lg:ml-auto"></div>
+                                <p class="max-w-xs text-base font-medium pt-4 lg:text-end">Professional employees are
+                                    there for you to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-center gap-6 flex-col  lg:flex-row-reverse mt-6">
+                        <div><i
+                                class="fa-brands fa-linux flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold lg:text-right">Sustainable Practice</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0 lg:ml-auto"></div>
+                                <p class="max-w-xs text-base font-medium pt-4 lg:text-end">Professional employees are
+                                    there for you to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-center gap-6 flex-col  lg:flex-row-reverse mt-6">
+                        <div><i
+                                class="fa-brands fa-mandalorian flex justify-center items-center h-[60px] w-[60px]  text-2xl bg-gray-100 rounded-full"></i>
+                        </div>
+                        <div class="flex justify-center lg:text-left text-center">
+                            <div class="">
+                                <h3 class="text-2xl font-bold lg:text-right">The Benefits Only</h3>
+                                <div class="w-[100px] h-[1px] bg-[#0C0C0CCC] mt-5 mx-auto lg:mx-0 lg:ml-auto"></div>
+                                <p class="max-w-xs text-base font-medium pt-4 lg:text-end">Professional employees are
+                                    there for you to
+                                    pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <!-- footer -->
     <footer class="footer footer-center p-10 bg-black text-white">
