--- a/index.html
+++ b/index.html
@@ -736,21 +736,23 @@
                 <img src="./images/logo.png" alt="">
                 <span class="text-4xl font-bold">Fruit Burst</span>
             </div>
-            <div class="grid lg:gap-14 lg:grid-cols-6 lg:my-16 grid-cols-4">
+            <div class="flex lg:gap-14 md:flex-row flex-wrap gap-6 my-6 justify-center lg:my-12">
                 <a class="link link-hover text-lg font-semibold">Home</a>
                 <a class="link link-hover text-lg font-semibold">About</a>
                 <a class="link link-hover text-lg font-semibold">Shop</a>
                 <a class="link link-hover text-lg font-semibold">All Fruit</a>
-                <a class="link link-hover text-lg font-semibold">Support</a>
-                <a class="link link-hover text-lg font-semibold ">Account</a>
+                <div class="mx-auto gap-6 flex">
+                    <a class="link link-hover text-lg font-semibold">Support</a>
+                <a class="link link-hover text-lg font-semibold">Account</a>
+                </div>
             </div>
-            <div class="grid grid-cols-3  lg:grid-flow-col lg:gap-10">
-                <a><i class="fa-brands fa-twitter text-4xl"></i></a>
-                <a><i class="fa-brands fa-facebook text-4xl"></i></a>
-                <a><i class="fa-brands fa-youtube text-4xl"></i></a>
-                <a><i class="fa-brands fa-linkedin text-4xl"></i></a>
-                <a><i class="fa-brands fa-instagram text-4xl"></i></a>
-                <a><i class="fa-brands fa-apple text-4xl"></i></a>
+            <div class="grid grid-flow-col gap-6  lg:gap-10">
+                <a class="hover:text-blue-600"><i class="fa-brands fa-twitter text-2xl lg:text-4xl"></i></a>
+                <a class="hover:text-blue-600"><i class="fa-brands fa-facebook text-2xl lg:text-4xl"></i></a>
+                <a class="hover:text-red-600"><i class="fa-brands fa-youtube text-2xl lg:text-4xl"></i></a>
+                <a class="hover:text-blue-600"><i class="fa-brands fa-linkedin text-2xl lg:text-4xl"></i></a>
+                <a class="hover:text-pink-600"><i class="fa-brands fa-instagram text-2xl lg:text-4xl"></i></a>
+                <a class="hover:text-rose-300"><i class="fa-brands fa-apple text-2xl lg:text-4xl"></i></a>
             </div>
         </div>
         <!-- <div>
