--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
         </section>
     </main>
     <!-- footer -->
-    <footer class="footer footer-center p-10 bg-black text-white">
+    <footer class="contianer mx-auto footer footer-center p-10 bg-black text-white ">
         <div>
             <div class="grid grid-flow-col gap-4 items-center">
                 <img src="./images/logo.png" alt="">
