--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </label>
                         <ul tabindex="1"
-                            class="menu order-12 menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-32 ">
+                            class="menu order-12 menu-sm dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-32 z-30">
                             <li><a>Home</a></li>
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
